--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,110 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+@mixin mobile {
+  @media screen and (min-width: 480px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
+}
+.container {
+  width: 100%;
+  max-width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  @include mobile {
+    max-width: 448px;
+  }
+  @include tablet {
+    max-width: 720px;
+  }
+  @include desktop {
+    max-width: 1200px;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.header {
+  background: rgb(39, 87, 200);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+}
+
+.search-form {
+  background-color: white;
+  padding: 0.25rem 0.35rem 0.35rem 0.75rem;
+  display: flex;
+  align-items: center;
+  border-radius: 0.75rem;
+}
+
+.search-form i {
+  color: hsl(226, 64%, 44%);
+  font-size: 1.25rem;
+}
+.search-form input {
+  outline: none;
+  border: none;
+  width: 90%;
+  height: 22px;
+  color: hsl(228, 15%, 50%);
+  margin: 0 0.5rem;
+}
+.search-form input::placeholder {
+  color: black;
+}
+
+.gallery {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.btn {
+  display: inline-block;
+  font-family: inherit;
+  cursor: pointer;
+  border-radius: 6px;
+  border: none;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.photo-card {
+  flex-basis: calc((100% - 150px) / 3);
+}
+
+.gallery-img {
+  width: 100%;
+  height: 100%;
+  max-width: unset;
+  object-fit: cover;
+}
+
+.disabled,
+.disabled:hover {
+  background-color: #cccccc;
+  color: #303030;
+  opacity: 0.8;
+}
