--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,41 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
-}
+// .gallery {
+//   padding: 15px;
+//   display: flex;
+//   justify-content: center;
+//   flex-wrap: wrap;
+//   gap: 20px;
+// }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
+// .photo-card {
+//   width: 300px;
+//   box-shadow: 6px 6px 5px 0px #4d354468;
+//   border-radius: 4px;
+// }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
-}
+// .info {
+//   display: flex;
+//   justify-content: space-between;
+//   column-gap: 7px;
+//   padding: 5px;
+// }
+
+// .info-item {
+//   display: flex;
+//   align-items: center;
+//   flex-direction: column;
+//   row-gap: 3px;
+//   width: 100%;
+// }
+
+// .info-label {
+//   font-size: 14px;
+// }
+
+// .info-span {
+//   font-size: 12px;
+// }
+
+// .load-more {
+//     display: block;
+//     margin: 0 auto 30px;
+// }
